<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsWordActivity">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionsRandomWordOrder"
        android:id="@+id/cbRandom"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionsReverseTranslation"
        android:id="@+id/cbSide"
        android:layout_below="@+id/cbRandom"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:enabled="true"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOptionSave"
        android:width="160dp"
        android:onClick="buttonSaveClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/cbSide"
        android:singleLine="true"
        android:text="@string/buttonSave" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOptionCancel"
        android:width="160dp"
        android:onClick="buttonCancelClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/buttonCancel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStep"
        android:layout_below="@+id/cbSide"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:text="@string/optionStep" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextStep"
        android:layout_below="@+id/textViewStep"
        android:layout_alignParentStart="true" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textViewTranslation"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonEnglish"
            android:id="@+id/rbEnglish" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonCzech"
            android:id="@+id/rbCzech" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTranslation"
        android:layout_below="@+id/editTextStep"
        android:layout_alignParentStart="true"
        android:text="@string/optionTranslation" />

</RelativeLayout>
